<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="500dp"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<com.google.android.material.card.MaterialCardView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="0dp"
    app:cardBackgroundColor="@color/white"
    app:cardPreventCornerOverlap="false"
    app:strokeColor="#000"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    app:strokeWidth="2dp">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
   <LinearLayout
       android:id="@+id/profile_layout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="100dp"
       android:orientation="horizontal">
       <ImageView
           android:id="@+id/img_user_profile"
           android:layout_width="70dp"
           android:layout_height="70dp"
           android:layout_marginLeft="30dp"
           android:layout_marginRight="20dp"
           android:src="@drawable/ic_user"/>
       <TextView
           android:id="@+id/txt_profile_title"
           android:layout_width="wrap_content"
           android:layout_gravity="center"
           android:fontFamily="@font/sans"
           android:textSize="25sp"
           android:textColor="@color/black"
           android:text="Hassan Qadeer"

           android:layout_height="wrap_content"/>
   </LinearLayout>
    <TextView
        android:id="@+id/profile_underline"
        android:layout_width="match_parent"
        android:background="@color/black"
        android:layout_below="@id/profile_layout"
        android:layout_height="3dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="30dp"
        />
    <TextView
        android:id="@+id/title_spot"
        android:layout_width="match_parent"
        android:layout_below="@id/profile_underline"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/sans"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:text="Spot"
        />
    <LinearLayout
        android:id="@+id/add_spot_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@id/title_spot"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_add_spot"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/sans"
            android:layout_marginLeft="30dp"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:text="@string/add_spot"
            android:layout_weight=".9"

            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/img_add_spot"
            android:layout_width="20dp"
            android:layout_height="25dp"
            android:layout_weight=".1"
            android:layout_marginRight="30dp"
            android:src="@drawable/ic_plus"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/update_spot_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/add_spot_layout"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_update_spot"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/sans"
            android:layout_marginLeft="30dp"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:text="@string/update_spot_title"
            android:layout_weight=".9"

            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/img_update_spot"
            android:layout_width="20dp"
            android:layout_height="25dp"
            android:layout_weight=".1"
            android:layout_marginRight="30dp"
            android:src="@drawable/ic_update"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/delete_spot_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@id/update_spot_layout"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_delete_spot"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/sans"
            android:layout_marginLeft="30dp"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:text="@string/delete_spot_title"
            android:layout_weight=".9"

            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/img_delete_spot"
            android:layout_width="20dp"
            android:layout_height="25dp"
            android:layout_weight=".1"
            android:layout_marginRight="30dp"
            android:src="@drawable/ic_delete"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/view_spot_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@id/delete_spot_layout"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_view_spot"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/sans"
            android:layout_marginLeft="30dp"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:text="@string/view_all_spot_title"
            android:layout_weight=".9"

            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/img_view_spot"
            android:layout_width="20dp"
            android:layout_height="25dp"
            android:layout_weight=".1"
            android:layout_marginRight="30dp"
            android:src="@drawable/ic_view"/>
    </LinearLayout>
    <TextView
        android:id="@+id/spot_underline"
        android:layout_width="match_parent"
        android:background="@color/black"
        android:layout_below="@id/view_spot_layout"
        android:layout_height="3dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="30dp"
        />
    <TextView
        android:id="@+id/title_view_bookings"
        android:layout_width="match_parent"
        android:layout_below="@id/spot_underline"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/sans"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:text="Booking"
        />
    <LinearLayout
        android:id="@+id/view_bookings_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@id/title_view_bookings"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_view_bookings"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/sans"
            android:layout_marginLeft="30dp"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:text="@string/view_all_bookings"
            android:layout_weight=".9"

            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/img_view_bookings"
            android:layout_width="20dp"
            android:layout_height="25dp"
            android:layout_weight=".1"
            android:layout_marginRight="30dp"
            android:src="@drawable/ic_view"/>
    </LinearLayout>
    <TextView
        android:id="@+id/bookings_underline"
        android:layout_width="match_parent"
        android:background="@color/black"
        android:layout_below="@id/view_bookings_layout"
        android:layout_height="3dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="30dp"
        />
    <TextView
        android:id="@+id/title_application"
        android:layout_width="match_parent"
        android:layout_below="@id/bookings_underline"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/sans"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:text="Application"
        />
    <LinearLayout
        android:id="@+id/application_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@id/title_application"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_logout"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/sans"
            android:layout_marginLeft="30dp"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:text="@string/logout"
            android:layout_weight=".9"

            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/img_logout"
            android:layout_width="20dp"
            android:layout_height="25dp"
            android:layout_weight=".1"
            android:layout_marginRight="30dp"
            android:src="@drawable/ic_logout"/>
    </LinearLayout>
</RelativeLayout>
</com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>