<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        android:id="@+id/app_bar_vendor_drawer"
        layout="@layout/app_bar_vendor_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <RelativeLayout
        android:id="@+id/relativeDrawer"
        android:layout_width="310dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical" >

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:cardCornerRadius="0dp"

            app:cardBackgroundColor="@color/white"
            app:cardPreventCornerOverlap="false"
            app:strokeColor="#000"
            app:strokeWidth="2dp">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:id="@+id/profile_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="100dp"
                        android:orientation="horizontal">
                        <ImageView
                            android:id="@+id/img_user_profile"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="20dp"
                            android:src="@drawable/ic_user"/>
                        <TextView
                            android:id="@+id/txt_profile_title"
                            android:layout_width="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/sans"
                            android:textSize="25sp"
                            android:textColor="@color/black"
                            android:text="Hassan Qadeer"

                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <TextView
                        android:id="@+id/profile_underline"
                        android:layout_width="match_parent"
                        android:background="@color/black"
                        android:layout_height="3dp"
                        android:layout_marginLeft="30dp"
                        android:layout_below="@id/profile_layout"
                        android:layout_marginRight="30dp"
                        android:layout_marginTop="30dp"
                        />
                    <TextView
                        android:id="@+id/title_view_bookings"
                        android:layout_width="match_parent"
                        android:layout_below="@id/profile_underline"

                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/sans"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:text="Booking"
                        />
                    <LinearLayout
                        android:id="@+id/view_bookings_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_below="@id/title_view_bookings"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txt_view_bookings"
                            android:layout_width="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/sans"
                            android:layout_marginLeft="30dp"
                            android:textSize="25sp"
                            android:textColor="@color/black"
                            android:text="@string/view_bookings"
                            android:layout_weight=".9"

                            android:layout_height="wrap_content"/>
                        <ImageView
                            android:id="@+id/img_view_bookings"
                            android:layout_width="20dp"
                            android:layout_height="25dp"
                            android:layout_marginTop="10dp"
                            android:layout_weight=".1"
                            android:layout_marginRight="30dp"
                            android:src="@drawable/ic_view"/>
                    </LinearLayout>
                    <TextView
                        android:id="@+id/booking_underline"
                        android:layout_width="match_parent"
                        android:background="@color/black"
                        android:layout_below="@id/view_bookings_layout"
                        android:layout_height="3dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="30dp"
                        />
                    <TextView
                        android:id="@+id/title_support"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_below="@id/booking_underline"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/sans"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:text="Support"
                        />
                    <LinearLayout
                        android:id="@+id/support_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:layout_below="@id/title_support"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txt_add_spot"
                            android:layout_width="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/sans"
                            android:layout_marginLeft="30dp"
                            android:textSize="25sp"
                            android:textColor="@color/black"
                            android:text="@string/support_inbox"
                            android:layout_weight=".9"

                            android:layout_height="wrap_content"/>
                        <ImageView
                            android:id="@+id/img_add_spot"
                            android:layout_width="20dp"
                            android:layout_height="25dp"
                            android:layout_weight=".1"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="30dp"
                            android:src="@drawable/ic_plus"/>
                    </LinearLayout>


                    <TextView
                        android:id="@+id/support_underline"
                        android:layout_width="match_parent"
                        android:background="@color/black"
                        android:layout_below="@id/support_layout"
                        android:layout_height="3dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginTop="5dp"
                        />
                    <TextView
                        android:id="@+id/title_application"
                        android:layout_width="match_parent"
                        android:layout_below="@id/support_underline"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/sans"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:text="Application"
                        />
                    <LinearLayout
                        android:id="@+id/application_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:layout_below="@id/title_application"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txt_logout"
                            android:layout_width="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/sans"
                            android:layout_marginLeft="30dp"
                            android:textSize="25sp"
                            android:textColor="@color/black"
                            android:text="@string/logout"
                            android:layout_weight=".9"

                            android:layout_height="wrap_content"/>
                        <ImageView
                            android:id="@+id/img_logout"
                            android:layout_width="20dp"
                            android:layout_height="25dp"
                            android:layout_weight=".1"
                            android:layout_marginRight="30dp"
                            android:src="@drawable/ic_logout_white"/>
                    </LinearLayout>
                </RelativeLayout>
            </ScrollView>
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>